# SIFR_Protocol

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  REVIEWER_GUIDE.md  pyproject.toml  requirements.txt
benchmarks/: bench_adversary_rejection.py  bench_capability_enforcement.py  bench_credential_verification.py  bench_did_resolution.py  bench_io.py  bench_latency.py  bench_payload_size.py  bench_quic_latency.py  bench_quic_network.py  bench_replay_overhead.py  bench_revocation_overhead.py  bench_signature_overhead.py  bench_v0_3_adversary_rejection.py  bench_wasm_overhead.py  environment.py
docker/: Dockerfile.quic_node  compose_quic_netem.yml  compose_quic_two_networks.yml  quic_node.py  quic_runner.py
docs/: credential_model.md  crypto_assumptions.md  deployment_guide.md  did_method.md  experiment_plan.md  formal_model.md  formal_scope.md  full_security_implementation_prompt.md  future_work.md  implementation_notes.md  incident_response.md  key_management.md  limitations.md  limitations_v0_5.md  model_code_traceability_v0_4.md  paper_evidence_log.md  production_security_model.md  proof_obligations_v0_3.md  proof_obligations_v0_4.md  protocol_spec_v0.md  quic_network_evaluation.md  related_work_notes.md  revocation_replay_scope.md  security_claims_v0_4.md  security_model.md  threat_model.md  wasm_sandbox.md
examples/: demo_adversary_cases.py  demo_audit_dag.py  demo_capability_credential.py  demo_did_resolution.py  demo_key_rotation.py  demo_quic_two_agents.py  demo_replay_rejection.py  demo_revoked_capability.py  demo_secure_quic_wasm_did_flow.py  demo_tensor_frame.py  demo_two_agents.py  demo_unauthorized_action.py  demo_v0_3_adversary_cases.py  demo_wasm_calculator.py
formal/: MC.cfg  apalache.cfg  run_tlc.ps1  run_tlc.sh  sifr_capability.tla
paper/: README_FOR_REVIEWERS.md  main.tex  overleaf_upload_instructions.md  references.bib
review/: final_quality_gate.md  hostile_review_production_hardening.md  production_proof_quality_gate.md  red_team_report.md  v0.2_review_packet.md  v0_3_1_strict_quality_gate.md  v0_3_release_manifest.json  v0_3_strict_quality_gate.md  v0_4_proof_quality_gate.md  v0_4_release_manifest.json
scripts/: build_release_zips.py  clean_outputs.sh  compile_paper.sh  generate_all_figures.py  generate_figures.py  generate_ieee_figure.py  generate_quic_network_figure.py  generate_v0_2_figures.py  generate_v0_3_adversary_figure.py  install_tla.ps1  refresh_formal_metadata.py  reproduce_all.ps1  (+6 more)
(+106 files in other folders)
