[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sifr-v0-research-package"
version = "0.1.0"
description = "SIFR v0.1 research prototype for signed, capability-checked AI-agent frames."
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0.0", "numpy>=1.26.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
