[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sifr"
version = "0.3.1"
description = "SIFR v0.3 research artifact: signed typed agent frames with DID resolution, VC-inspired capability credentials, revocation, replay protection, QUIC transport, WASM tool isolation, and a TLA+ formal model."
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "numpy>=1.26.0",
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",
    "aioquic>=1.0.0",
    "wasmtime>=20.0.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0.0"]
formal-tools = []
dev = [
    "pytest>=8.0.0",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
]

# Only the `sifr/` Python package is shipped. Sibling top-level
# directories (tests, paper, docs, formal, review, benchmarks,
# scripts, docker, wasm) are repository assets, not Python packages.
[tool.setuptools.packages.find]
include = ["sifr*"]
exclude = [
    "tests*",
    "paper*",
    "docs*",
    "formal*",
    "review*",
    "benchmarks*",
    "scripts*",
    "docker*",
    "wasm*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
